# Dashboard-OPCUA-Client

./: .clang-format  .clang-format-ignore  .dockerignore  .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  CMakeSettings.json  DashboardOpcUaClient.cpp  DashboardOpcUaClient.hpp  Dockerfile  Dockerfile.debian  Main.cpp  README.md  TestResultType.cpp  WssTroubleshooter.cpp  cmake-format.yaml  configuration.json.example  docker-compose.yml  initialbuild.sh  mosquitto.conf.example  run.sh  usage.md  usage_as_model_test.md  usage_for_dashboard.md
.github/: CMakeLists.txt  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/ciPatches/: libressl-no_postfix.patch  paho.mqtt.c.patch  paho.mqtt.cpp.patch
.github/linters/: .clang-format  .jscpd.json  .yaml-lint.yml
.github/workflows/: build.yml  clean-images.yml  codeql-analysis.yml  linter.yml
DashboardClient/: CMakeLists.txt  DashboardClient.cpp  DashboardClient.hpp  IDashboardDataClient.cpp  IDashboardDataClient.hpp  IPublisher.hpp  NodeIdsWellKnown.hpp  OpcUaTypeReader.cpp  OpcUaTypeReader.hpp
DashboardClient/Converter/: ModelToJson.cpp  ModelToJson.hpp
DashboardClient/Exceptions/: ClientNotConnected.hpp  ElementNotFound.hpp  OpcUaException.hpp  UmatiException.hpp
DashboardClient/TypeDefinition/: IdentificationType.cpp  IdentificationType.hpp  JobCurrentStateNumber.cpp  JobCurrentStateNumber.hpp  NotificationFolderType.cpp  NotificationFolderType.hpp  ProductionJobListType.cpp  ProductionJobListType.hpp  StacklightType.cpp  StacklightType.hpp  StateModeListType.cpp  StateModeListType.hpp  ToolListType.cpp  ToolListType.hpp  UmatiTypeDefinition.hpp  UmatiTypeNodeIds.hpp
DashboardClient/TypeDictionary/: TypeDictionary.cpp  TypeDictionary.hpp
MachineObserver/: CMakeLists.txt  DashboardMachineObserver.cpp  DashboardMachineObserver.hpp  IMachineCache.cpp  IMachineCache.hpp  MachineCacheJsonFile.cpp  MachineCacheJsonFile.hpp  MachineObserver.cpp  MachineObserver.hpp  PublishMachinesList.cpp  PublishMachinesList.hpp  PublishTopicFactory.cpp  PublishTopicFactory.hpp  Topics.cpp  Topics.hpp
MachineObserver/Exceptions/: MachineInvalidException.hpp  MachineOfflineException.hpp  NoPublishTopicSet.hpp
ModelOpcUa/: CMakeLists.txt
ModelOpcUa/src/: CMakeLists.txt
ModelOpcUa/src/ModelOpcUa/: ModelDefinition.cpp  ModelDefinition.hpp  ModelInstance.cpp  ModelInstance.hpp  ModelOpcUa.hpp
MqttPublisher/: CMakeLists.txt  MqttPublisher.cpp  MqttPublisher.hpp
MqttPublisher_Paho/: CMakeLists.txt  MqttPublisher_Paho.cpp  MqttPublisher_Paho.hpp
ObjectTypeHandler/: CMakeLists.txt  ObjectTypeHandler.cpp  ObjectTypeHandler.h  Type.cpp  Type.h
OpcUaClient/: CMakeLists.txt  IDashboardClient.hpp  OpcUaClient.cpp  OpcUaClient.hpp  OpcUaInterface.hpp  OpcUaSubscriptionInterface.hpp  ScopeExitGuard.hpp  SetupSecurity.cpp  SetupSecurity.hpp  Subscription.cpp  Subscription.hpp
OpcUaClient/Converter/: ModelNodeIdToNodeId.cpp  ModelNodeIdToNodeId.hpp  ModelNodeIdToUaNodeId.cpp  ModelNodeIdToUaNodeId.hpp  ModelQualifiedNameToUaQualifiedName.cpp  ModelQualifiedNameToUaQualifiedName.hpp  ModelToUaConverter.cpp  ModelToUaConverter.hpp  NodeIdToModelNodeId.cpp  NodeIdToModelNodeId.hpp  UaDataValueToJsonValue.cpp  UaDataValueToJsonValue.hpp  UaNodeClassToModelNodeClass.cpp  UaNodeClassToModelNodeClass.hpp  UaNodeIdToModelNodeId.cpp  UaNodeIdToModelNodeId.hpp  UaQualifiedNameToModelQualifiedName.cpp  UaQualifiedNameToModelQualifiedName.hpp  UaToModelConverter.cpp  UaToModelConverter.hpp
OpcUaClient/Converter/CustomDataTypes/: types_machinery_result_generated.c  types_machinery_result_generated.h  types_machinery_result_generated_handling.h  types_tightening_generated.c  types_tightening_generated.h  types_tightening_generated_handling.h
OpcUaClient/Exceptions/: OpcUaException.hpp  OpcUaNonGoodStatusCodeException.cpp  OpcUaNonGoodStatusCodeException.hpp  UmatiException.hpp
RedisPublisher/: CMakeLists.txt  RedisPublisher.cpp  RedisPublisher.hpp  winsock_initializer.h
Tests/: CMakeLists.txt  TestConverter.cpp  TestIdEncode.cpp  TestMachineObserver.cpp  TestOpcUaClient.cpp  TestSubscription.cpp  TestUrlEncode.cpp  testMachineCache.cpp  testconfigurationjsonfile.cpp  uaclientsdk_mock.hpp
Tests/data/: Configuration.json  Configuration2.json  MachineCacheTest.json
Tests/integration/cacert_test/: ConfigurationCa2.json  docker-compose.yml  evaluateTest.sh  genCerts.sh  test_entrypoint.sh
Tests/integration/mqtt_test/: configuration.json  docker-compose.yml  mosquitto.conf  requirements.txt  test_mqtt_sampleserver.py  waitForContainer.sh
Tests/integration/mqtt_test/schemas/SampleServer/: BaseMachineTool.json  BasicGMS.json  FullMachineTool.json  FullWoodworking.json
Tests/integration_tests/cacert_test/: .gitignore  ConfigurationCa.json  ConfigurationCa2.json  docker-compose.yml  mosquitto.conf  test_entrypoint.sh
Tests/unit/: CMakeLists.txt  TestCaCertificate.cpp  TestConverter.cpp  TestIdEncode.cpp  testconfigurationjsonfile.cpp
Tests/unit/data/: Configuration.json  Configuration2.json
Tools/: Configuration.json  UmatiTypeNodeIds.hpp  UmatiTypeNodeIds.hpp.template  build-easyloggingpp.sh  build-googletest.sh  build-json.sh  build-paho-c.sh  build-paho-cpp.sh  extractTypeNodeIds.py  restart.ps1  umati.xml  venv.crt  venv.key
Util/: Base64.cpp  Base64.hpp  CMakeLists.txt  ClientVersion.cpp.in  ClientVersion.hpp  Configuration.cpp  Configuration.hpp  ConfigurationJsonFile.cpp  ConfigurationJsonFile.hpp  ConfigureLogger.cpp  ConfigureLogger.hpp  IdEncode.cpp  IdEncode.hpp  PublishTopics.cpp  PublishTopics.hpp  UrlEncode.cpp  UrlEncode.hpp
Util/Exceptions/: ConfigurationException.hpp
cmake/: FindEasyloggingpp.cmake  FindOpenSSL.cmake  FindUaSdkCpp.cmake  Findeasyloggingpp.cmake  Findtinyxml2.cmake  SetGitBasedVersion.cmake  findCpp_redis.cmake  findMosquittoMqtt.cmake  setGitBasedVersion.cmake
doc/: Configuration.md  Container.md  MQTT.md  Standalone.md  Troubleshooting.md  debug_on_windows.md  usage_as_model_test.md  usage_for_dashboard.md
example/: BasicUsage.cpp  CMakeLists.txt  ExampleModels.cpp  (+1 more)
(+21 files in other folders)
